# ShioajiExample

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
shioajiexample/: __init__.py
sjexample/: __init__.py  compose.py  deal_callback.py  df_compose.py
test/: test_compose.py  test_deal_callback.py  test_df_compose.py  test_tpcompose.py
tutor/: df_compose.ipynb  tp_compose.ipynb
