[tool.poetry]
name = "shioajiexample"
version = "0.1.0"
description = ""
authors = ["Sally <nipolikae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
shioaji = "^0.2.0-alpha.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
