[tool.poetry]
name = "sjexample"
version = "0.1.0"
description = ""
authors = ["Sally <nipolikae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
shioaji = "^0.2.0-dev.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mock = "^3.1.0"
pytest-cov = "^2.8.1"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
